Added AdminController class and FXML file. Added BST class. implemented the BST class in AdminController class. implemented the quick sort in AdminController class.

--- a/src/main/resources/com/teamlimonta/majorproject/main-window.fxml
+++ b/src/main/resources/com/teamlimonta/majorproject/main-window.fxml
@@ -23,6 +23,11 @@
                             <Tooltip text="View the list of Character Names." />
                         </tooltip>
                     </Button>
+                    <Button onAction="#backToLoginWindow" text="LogOut">
+                        <tooltip>
+                            <Tooltip text="Log Out of Session" />
+                        </tooltip>
+                    </Button>
                 </HBox>
             </ToolBar>
         </VBox>
