--- a/src/main/resources/com/teamlimonta/majorproject/login-window.fxml
+++ b/src/main/resources/com/teamlimonta/majorproject/login-window.fxml
@@ -12,10 +12,7 @@
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.text.Font?>
 
-<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity"
-            prefHeight="400.0" prefWidth="600.0" style="-fx-background-color: gray;"
-            xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1"
-            fx:controller="com.teamlimonta.majorproject.LoginController">
+<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" style="-fx-background-color: gray;" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.teamlimonta.majorproject.LoginController">
     <left>
         <AnchorPane prefHeight="200.0" prefWidth="200.0" BorderPane.alignment="CENTER">
             <ImageView fitHeight="400.0" fitWidth="291.0" pickOnBounds="true" preserveRatio="true">
@@ -37,27 +34,25 @@
             </Label>
             <TextField fx:id="userNameTextField" layoutX="14.0" layoutY="158.0" promptText="UserName" />
             <PasswordField fx:id="passwordTextField" layoutX="14.0" layoutY="212.0" promptText="Password" />
-            <HBox alignment="CENTER" layoutX="172.0" layoutY="334.0" prefHeight="52.0" prefWidth="144.0" spacing="6.0">
+            <HBox alignment="CENTER_LEFT" layoutX="134.0" layoutY="334.0" prefHeight="52.0" prefWidth="182.0" spacing="3.0">
                 <opaqueInsets>
                     <Insets />
                 </opaqueInsets>
                 <Button fx:id="loginButton" mnemonicParsing="false" onAction="#onLoginClicked" text="Log In" />
                 <Button fx:id="registerButton" mnemonicParsing="false" onAction="#onRegisterClicked" text="Register" />
+                <Button fx:id="adminButton" mnemonicParsing="false" onAction="#onAdminClicked" text="Admin" />
             </HBox>
-            <Label fx:id="resultMessage" layoutX="14.0" layoutY="245.0" prefHeight="30.0" prefWidth="167.0"
-                   textFill="RED">
+            <Label fx:id="resultMessage" layoutX="14.0" layoutY="245.0" prefHeight="30.0" prefWidth="167.0" textFill="RED">
                 <font>
                     <Font size="14.0" />
                 </font>
             </Label>
-            <Label alignment="CENTER" layoutX="38.0" layoutY="53.0" prefHeight="50.0" prefWidth="241.0"
-                   text="ScreenWriter Buddy" textAlignment="CENTER">
+            <Label alignment="CENTER" layoutX="38.0" layoutY="53.0" prefHeight="50.0" prefWidth="241.0" text="ScreenWriter Buddy" textAlignment="CENTER">
                 <font>
                     <Font name="Courier New Bold" size="22.0" />
                 </font>
             </Label>
-            <Label alignment="CENTER" layoutX="54.0" layoutY="95.0" prefHeight="17.0" prefWidth="219.0"
-                   text="From Idea to Concept!" textAlignment="CENTER">
+            <Label alignment="CENTER" layoutX="54.0" layoutY="95.0" prefHeight="17.0" prefWidth="219.0" text="From Idea to Concept!" textAlignment="CENTER">
                 <font>
                     <Font name="Courier New Bold" size="14.0" />
                 </font>
