--- a/src/main/resources/com/teamlimonta/majorproject/namelist-dialog.fxml
+++ b/src/main/resources/com/teamlimonta/majorproject/namelist-dialog.fxml
@@ -1,12 +1,27 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.geometry.Insets?>
+<?import javafx.scene.control.Button?>
 <?import javafx.scene.control.ListView?>
 <?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.VBox?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="700.0"
-            prefWidth="600.0" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.teamlimonta.majorproject.MainController">
-    <VBox prefHeight="700.0" prefWidth="600.0">
-        <ListView fx:id="listOFNamesViewer" prefHeight="640.0" prefWidth="600.0"/>
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="700.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.teamlimonta.majorproject.NameController">
+    <VBox alignment="CENTER" prefHeight="700.0" prefWidth="600.0">
+        <ListView fx:id="listOFNamesViewer" prefHeight="640.0" prefWidth="600.0" />
+        <HBox alignment="BASELINE_RIGHT" prefHeight="40.0" prefWidth="600.0" spacing="5.0">
+            <opaqueInsets>
+                <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
+            </opaqueInsets>
+            <padding>
+                <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
+            </padding>
+            <Button fx:id="okButton" mnemonicParsing="false" onAction="#onOkClicked" text="OK" />
+            <Button fx:id="cancelButton" mnemonicParsing="false" onAction="#onCancelClicked" text="CANCEL" />
+        </HBox>
+      <opaqueInsets>
+         <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
+      </opaqueInsets>
     </VBox>
 </AnchorPane>
