--- a/src/main/resources/com/teamlimonta/majorproject/register-window.fxml
+++ b/src/main/resources/com/teamlimonta/majorproject/register-window.fxml
@@ -13,35 +13,31 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity"
-            prefHeight="600.0" prefWidth="600.0" style="-fx-background-color: gray;"
-            xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1"
-            fx:controller="com.teamlimonta.majorproject.LoginController">
+<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="600.0" prefWidth="600.0" style="-fx-background-color: gray;" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.teamlimonta.majorproject.LoginController">
     <top>
-        <ImageView fitHeight="169.0" fitWidth="133.0" pickOnBounds="true" preserveRatio="true"
-                   BorderPane.alignment="CENTER">
+        <ImageView fitHeight="169.0" fitWidth="133.0" pickOnBounds="true" preserveRatio="true" BorderPane.alignment="CENTER">
             <BorderPane.margin>
-                <Insets top="10.0"/>
+                <Insets top="10.0" />
             </BorderPane.margin>
-            <Image url="@img/typewriterIcon.jpg"/>
+            <Image url="@img/typewriterIcon.jpg" />
         </ImageView>
     </top>
     <bottom>
         <HBox alignment="BOTTOM_RIGHT" spacing="10.0" BorderPane.alignment="CENTER">
             <opaqueInsets>
-                <Insets/>
+                <Insets />
             </opaqueInsets>
             <padding>
-                <Insets bottom="10.0" right="20.0" top="10.0"/>
+                <Insets bottom="10.0" right="20.0" top="10.0" />
             </padding>
             <Button fx:id="enterButton" mnemonicParsing="false" onAction="#onEnterButtonClicked" text="Enter">
                 <font>
-                    <Font name="Courier New Bold" size="12.0"/>
+                    <Font name="Courier New Bold" size="12.0" />
                 </font>
             </Button>
             <Button fx:id="cancelButton" mnemonicParsing="false" onAction="#onCancelButtonClicked" text="Cancel">
                 <font>
-                    <Font name="Courier New Bold" size="12.0"/>
+                    <Font name="Courier New Bold" size="12.0" />
                 </font>
             </Button>
         </HBox>
@@ -51,30 +47,34 @@
             <VBox alignment="CENTER" layoutX="145.0" layoutY="133.0" prefHeight="200.0" prefWidth="125.0" spacing="25.0">
                 <Label text="Login Name:">
                     <font>
-                        <Font name="Courier New Bold" size="18.0"/>
+                        <Font name="Courier New Bold" size="18.0" />
                     </font>
                 </Label>
                 <Label text="Password: ">
                     <font>
-                        <Font name="Courier New Bold" size="18.0"/>
+                        <Font name="Courier New Bold" size="18.0" />
                     </font>
                 </Label>
             </VBox>
             <VBox alignment="CENTER" layoutX="277.0" layoutY="133.0" prefHeight="200.0" prefWidth="178.0" spacing="25.0">
-                <TextField fx:id="loginNameRegTextField" alignment="CENTER"/>
-                <TextField fx:id="passwordRegTextField" alignment="CENTER"/>
+                <TextField fx:id="loginNameRegTextField" alignment="CENTER" />
+                <TextField fx:id="passwordRegTextField" alignment="CENTER" />
             </VBox>
-            <Text layoutX="152.0" layoutY="81.0" strokeType="OUTSIDE" strokeWidth="0.0"
-                  text="Welcome To ScreenWriting Buddy!">
+            <Text layoutX="152.0" layoutY="81.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Welcome To ScreenWriting Buddy!">
                 <font>
-                    <Font name="System Bold" size="18.0"/>
+                    <Font name="System Bold" size="18.0" />
                 </font>
             </Text>
             <Text layoutX="211.0" layoutY="111.0" strokeType="OUTSIDE" strokeWidth="0.0" text="A Concept Developing App!">
                 <font>
-                    <Font name="System Bold" size="14.0"/>
+                    <Font name="System Bold" size="14.0" />
                 </font>
             </Text>
+         <Label fx:id="regLabel" alignment="CENTER" contentDisplay="CENTER" layoutX="185.0" layoutY="308.0" prefHeight="17.0" prefWidth="216.0" textFill="#f00000">
+            <font>
+               <Font size="24.0" />
+            </font>
+         </Label>
         </AnchorPane>
     </center>
 </BorderPane>
